# pw-audioshare

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
data/: pw-audioshare.desktop
packaging/rpm/: pw-audioshare.spec
src/: application.rs  config.rs  main.rs  presets.rs  settings.rs  tray.rs
src/model/: link_object.rs  mod.rs  port_object.rs
src/pipewire/: messages.rs  mod.rs  state.rs  thread.rs
src/ui/: window.rs
