[package]
name = "pw-audioshare"
version = "1.0.1"
edition = "2021"
rust-version = "1.75"
description = "An accessible GTK4 patchbay for PipeWire"
license = "MIT"

[dependencies]
# GTK4 and GLib
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
glib = "0.20"
gio = "0.20"

# Libadwaita for modern GNOME styling
adw = { version = "0.7", package = "libadwaita", features = ["v1_4"] }

# PipeWire bindings
pipewire = "0.8"

# Async channels for thread communication
async-channel = "2.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Once cell for lazy statics
once_cell = "1.20"

# Serialization for presets
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# XDG directories
dirs = "5.0"

[profile.release]
lto = true
strip = true
